# yolov8ncnn

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/vip/wqby/yolov8ncnn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov811.param  yolov8n-cls.param
app/src/main/cpp/: CMakeLists.txt  yolov8.cpp  yolov8cls.cpp  yolov8cls_Interface.cpp  yolov8cls_Interface.h
app/src/main/java/vip/wqby/yolov8ncnn/: MainActivity.java  yolov8.java  yolov8cls.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/vip/wqby/yolov8ncnn/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
